k8s/base/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka

          image: apache/kafka:3.8.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: kafka
              containerPort: 9092

            - name: controller
              containerPort: 9093

          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data

          startupProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: kafka

spec:
  selector:
    app: kafka

  ports:
    - name: kafka
      port: 9092
      targetPort: kafka

    - name: controller
      port: 9093
      targetPort: controller

  type: ClusterIP
